# dynamic_library

./: README.md
animal/: CMakeLists.txt
animal/include/: animal.h
animal/src/: animal.cpp
use_animal/: CMakeLists.txt  main.cpp
